2005-07-30  Richard A. Stellingwerff  <remenic@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	
	Using latest engine features. Using the more vibrant selection color
	from Shaun McCance.
	

2005-07-27  Thomas Wood  <thos@gnome.org>

	* NEWS: Updated for 2.6.4 release
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_drawing.c:
	(do_smooth_draw_shadow): Fixes bug 305374

2005-07-27  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (draw_box):

	Fixed #1244760 (clearlooks sf.net bugtracker).

2005-07-24  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (paint_stock_image):
	* engines/crux/src/crux-pixmaps.c: (pixmap_cache_ref),
	(pixmap_cache_set), (eazel_engine_image_render),
	(eazel_engine_stock_pixmap_and_mask_scaled),
	(eazel_engine_stock_pixmap_and_mask):
	* engines/crux/src/crux-pixmaps.h:

	Patch applied from (and fixes) bug 161960

2005-07-24  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/support.c:
	* engines/clearlooks/src/support.h:

	Updated clearlooks engine

2005-07-09  Thomas Wood  <thos@gnome.org>

	* configure.ac: Update for 2.6.4
	* engines/lighthouseblue/src/lighthouseblue_style.c: (draw_option): Fixes bug 303112
	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
	(do_smooth_draw_box), (smooth_draw_box): Fixes bug 308551
	* engines/smooth/src/engine/smooth_gtk2_misc.c:
	(gtk_button_get_props): Fixes bug 305432
	* themes/Industrial/gtk-2.0/gtkrc: Fixes bug 170824

2005-05-14  Glynn Foster  <glynn.foster@sun.com>

	* engines/clearlooks/Makefile.am: Install into the correct
	directory. Fixes #300530.

2005-04-12  Thomas Wood  <thos@gnome.org>

	* NEWS: Updated for 2.6.3
	* configure.ac:
	* engines/clearlooks/Makefile.am:
	* engines/clearlooks/src/clearlooks_draw.c: (cl_draw_borders),